@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-13T08:11:22Z",
+  "timestamp" : "2023-07-13T16:11:04Z",
   "count_outdated" : 4777,
   "uniques_outdated" : 1377,
-  "count" : 4834,
-  "uniques" : 1413,
+  "count" : 4842,
+  "uniques" : 1417,
   "clones" : [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-06-30T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 15,
-      "count_minmax": [ 15, 15 ],
-      "count_decinc": [ 0, 15 ],
-      "uniques": 9,
-      "uniques_minmax": [ 9, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "count": 23,
+      "count_minmax": [ 15, 23 ],
+      "count_decinc": [ 0, 23 ],
+      "uniques": 13,
+      "uniques_minmax": [ 9, 13 ],
+      "uniques_decinc": [ 0, 13 ]
     }
   ]
 }
