@@ -1,11 +1,11 @@
 {
-  "count": 56,
-  "uniques": 28,
+  "count": 63,
+  "uniques": 31,
   "clones": [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-30T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
-      "count": 15,
-      "uniques": 9
+      "count": 23,
+      "uniques": 13
     }
   ]
 }
